# Thesis-Communication

./: CMakeLists.txt  README.md  build.sh
libs/AppRegisterClient/: CMakeLists.txt
libs/AppRegisterClient/include/AppRegisterClient/: AppRegister.h  Utils.h
libs/AppRegisterClient/src/: AppRegister.cc  Utils.cc
libs/AppRegisterCommon/: CMakeLists.txt
libs/AppRegisterCommon/include/AppRegisterCommon/: AppRegister.h  Semaphore.h
libs/AppRegisterCommon/src/: Semaphore.cc
libs/AppRegisterServer/: CMakeLists.txt
libs/AppRegisterServer/include/AppRegisterServer/: App.h  AppData.h  AppRegister.h  AppUtils.h  CGroupUtils.h  Frequency.h  Policy.h  Sensors.h  Utilization.h
libs/AppRegisterServer/src/: App.cc  AppData.cc  AppRegister.cc  AppUtils.cc  CGroupUtils.cc  Frequency.cc  Policy.cc  Sensors.cc  Utilization.cc
